# andre-app

./: .env  .gitignore  README.md  bbca.py  bbca2.py  crowdstrike.ipynb  main.py  pyproject.toml  requirements.txt  rrg.py  rrg1.py
.idx/: dev.nix
amplify-app/: package-lock.json  package.json
laravel-app/: .env  package-lock.json
laravel-app/database/: database.sqlite
vite-app/: package-lock.json  package.json
website/: index.html  metal_manufacturing_website.html  script.js  style.css
