[project]
name = "andre-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib>=1.6.5",
    "boto3>=1.40.69",
    "crowdstrike-falconpy>=1.5.4",
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pymongo>=4.15.3",
    "pypdf2>=3.0.1",
    "sqlalchemy>=2.0.44",
]
